# slick

./: .gitignore  Anchor.toml  Cargo.toml  README.md
docs/: 48-hour-launch-plan.md  adr-week-1.md  demo-checklist.md  demo-script.md  demo-video-shotlist.md  pitch-deck.md  pitch-narrative.md  slick-pitch-deck.pptx
programs/monetization_layer/: Cargo.toml
programs/monetization_layer/src/: lib.rs
scripts/: devnet-deploy.sh  generate-pitch-deck.cjs  local-deploy.sh  smoke-test-local.sh  solana-env.sh
supabase/migrations/: 0001_initial_schema.sql  0002_access_pass_upgrade.sql
web/: .env.example  package-lock.json  package.json
web/public/access-pass/: metadata.json
web/scripts/: local-smoke-test.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/features/content/: ContentViewer.tsx  CreatorDashboard.tsx  QRCreatorCard.tsx  data.ts  portable.ts  types.ts  useContentPurchase.ts
web/src/lib/: accessPass.ts  config.ts  database.types.ts  monetizationProgram.ts  solana.ts  supabase.ts  useSolPrice.ts
web/src/providers/: WalletProviders.tsx
