[package]
name = "monetization_layer"
version = "0.1.0"
description = "Programmable monetization layer on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monetization_layer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
] }
